k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: savannah-pos
  labels:
    name: savannah-pos
